Renamed index (1).html to index.html

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     <meta name="author" content="">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="shortcut icon" href="jimmy-master/images/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="jimmy-master/images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="jimmy-master/css/bootstrap.min.css">
     <!-- Site CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="jimmy-master/style.css">
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="jimmy-master/css/responsive.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/custom.css">
-	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+    <link rel="stylesheet" href="jimmy-master/css/custom.css">
+	<script src="jimmy-master/js/modernizr.js"></script> <!-- Modernizr -->
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -369,21 +369,21 @@
     <a href="#" id="scroll-to-top" class="dmtop global-radius"><i class="fa fa-angle-up"></i></a>
 
     <!-- ALL JS FILES -->
-    <script src="js/all.js"></script>
+    <script src="jimmy-master/js/all.js"></script>
 	<!-- Camera Slider -->
-	<script src="js/jquery.mobile.customized.min.js"></script>
-	<script src="js/jquery.easing.1.3.js"></script> 
-	<script src="js/parallaxie.js"></script>
-	<script src="js/headline.js"></script>
-	<script src="js/classie.js"></script>
-	<script src="js/TweenMax.min.js"></script>
-	<script src="js/slider-top.js"></script>
+	<script src="jimmy-master/js/jquery.mobile.customized.min.js"></script>
+	<script src="jimmy-master/js/jquery.easing.1.3.js"></script> 
+	<script src="jimmy-master/js/parallaxie.js"></script>
+	<script src="jimmy-master/js/headline.js"></script>
+	<script src="jimmy-master/js/classie.js"></script>
+	<script src="jimmy-master/js/TweenMax.min.js"></script>
+	<script src="jimmy-master/js/slider-top.js"></script>
 	<!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+    <script src="jimmy-master/js/jqBootstrapValidation.js"></script>
+    <script src="jimmy-master/js/contact_me.js"></script>
     <!-- ALL PLUGINS -->
-    <script src="js/custom.js"></script>
-    <script src="js/jquery.vide.js"></script>
+    <script src="jimmy-master/js/custom.js"></script>
+    <script src="jimmy-master/js/jquery.vide.js"></script>
 
 </body>
 </html>
