--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 	
 	<div id="content">
 		<div id="slider">
-		  <img src="jimmy-master/uploads/banner-01.jpg" alt="GRAPHIC DESIGN" data-url="#1">
-		  <img src="jimmy-master/uploads/banner-04.jpg" alt="WEB DEVELOPER" data-url="#4">
+		  <img src="jimmy-master/uploads/banner-01.jpg" alt="I'M A STUDENT" data-url="#1">
 		</div>
 	</div>
 
