Updated about me in index.html

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 				<div class="col-md-6">
                     <div class="message-box">                        
                         <h2>About Althea</h2>
-                        <p>  I am Althea Faye A. Bilbao a creative and motivated Graphic Design
-                            graduate with a strong foundation in design
+                        <p>  I am Althea Faye A. Bilbao a student and motivated Graphic Design
+                            with a strong foundation in design
                             principles, typography, and color theory. Proficient
                             in Adobe Creative Suite and passionate about
                             crafting visually compelling designs. </p>
