add image in index.html

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 	<div id="content">
 		<div id="slider">
 		  <img src="jimmy-master/uploads/banner-01.jpg" alt="I'M A STUDENT" data-url="#1">
+          <img src="jimmy-master/uploads/banner-04.jpg" alt="" data-url="#1">
 		</div>
 	</div>
 
