--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                             <p><ul><b>Age:</b></ul> 21 years old</p>
                             <p><ul><b>Degree:</b></ul> Bachelor of Science in Information System</p>
 
-                        <a href="#" class="sim-btn btn-hover-lt"><span class="btn-text">Download CV</span></a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 				
@@ -359,8 +358,7 @@
             <div class="footer-distributed">
                 <div class="footer-left">
                    
-                    <p class="footer-company-name">All Rights Reserved. &copy; 2018 <a href="#">Althea</a> Design By : 
-					<a href="https://html.design/">html design</a></p>
+                    <p class="footer-company-name">All Rights Reserved. </p>
                 </div>
             </div>
         </div><!-- end container -->
