change background color

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 						<p>Eager to
                             collaborate, learn, and contribute to innovative
                             projects.</p>
-                            <p><ul><b>Birtdate:</b></ul> Febuary 11, 2004</p>
-                            <p><ul><b>Age:</b></ul> 21 years old</p>
-                            <p><ul><b>Degree:</b></ul> Bachelor of Science in Information System</p>
+                            <p><b>Birtdate:</b> Febuary 11, 2004</p>
+                            <p><b>Age:</b> 21 years old</p>
+                            <p><b>Degree:</b> Bachelor of Science in Information System</p>
 
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
@@ -128,7 +128,7 @@
 	
 
 	
-	 <div id="testimonials" class="section wb">
+	 <div id="testimonials" class="section lb">
         <div class="container">
             <div class="section-title text-center">
                 <h3>Certificates</h3>
@@ -210,7 +210,7 @@
         </div><!-- end container -->
     </div><!-- end section -->
 
-    <div id="project" class="section wb">
+    <div id="project" class="section lb">
         <div class="container">
             <div class="section-title text-center">
                 <h3>Project</h3>
@@ -304,65 +304,6 @@
 			
 		</div>
 	</div>
-
-    <!-- Resume Section -->
-    <section id="resume" class="resume section">
-
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-          <h2>Resume</h2>
-          <p>Every experience tells a story, here’s mine.</p>
-        </div><!-- End Section Title -->
-  
-        <div class="container">
-  
-          <div class="row">
-  
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="resume-title"><i class="bi bi-person-circle"></i>Sumary</h3>
-  
-              <div class="resume-item pb-0">
-                <h4>Mylene M. Calo</h4>
-                <p><em>Motivated BS Information Systems student with a passion for web development, database management, and system analysis. Skilled in HTML, CSS, and JavaScript, with experience in building responsive web applications. Eager to learn, solve problems, and contribute to innovative projects.</em></p>
-                <ul>
-                  <li>P-4 Tawilon Ambago,Butuan City 8600</li>
-                  <li>+639482305048</li>
-                  <li>mylene.calo@carsu.edu.ph</li>
-                </ul>
-              </div><!-- Edn Resume Item -->
-  
-              <h3 class="resume-title"><i class="bi bi-buildings"></i>Organization</h3>
-              <div class="resume-item">
-                <h4>Information System Society (ISS)</h4>
-                <p>Member</p><h5>2022 - 2025</h5>
-                <p>Being part of the Information System Society has given me the opportunity to connect with fellow tech enthusiasts, explore new trends in IT, and improve my skills in web development and system analysis. Through events, projects, and collaborations, I continue to learn, grow, and stay inspired in the ever-evolving world of technology.</p>
-              </div><!-- Edn Resume Item -->
-            </div>
-  
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="resume-title"><i class="bi bi-backpack4-fill"></i>Education</h3>
-              <div class="resume-item">
-                <h4>Accountancy Business &amp; Management</h4>
-                <h5>2020 - 2022</h5>
-                <p><em>Saint Joseph Institute of Technology, Montilla Boulevard, BTC</em></p>
-                <p>During my senior high school years, I developed a strong foundation in business principles, financial management, and entrepreneurship. Through various coursework and projects, I enhanced my analytical and problem-solving skills while also engaging in leadership activities that strengthened my teamwork and communication abilities.</p>
-              </div><!-- Edn Resume Item -->
-  
-              <div class="resume-item">
-                <h4>Bachelor of Science in Information Systems</h4>
-                <h5>2022 - 2026</h5>
-                <p><em>Caraga State University, KM 7 Ampayon, BTC</em></p>
-                <p>Currently pursuing my degree in Information Systems, I am gaining expertise in web development, database management, and system analysis. Through hands-on projects, I am learning to design and implement efficient digital solutions while continuously exploring new technologies to improve my problem-solving abilities and technical skills.</p>
-              </div><!-- Edn Resume Item -->
-  
-            </div>
-  
-          </div>
-  
-        </div>
-  
-      </section><!-- /Resume Section -->
-  
   
 
     <div id="contact" class="section db">
